[workspace]
resolver = "2"
members = [
    "helix-logging",
    "helix-tracing",
    "phenotype-health",
    "phenotype-health-axum",
    "phenotype-health-cli",
    "phenotype-logging",
    "phenotype-metrics",
    "phenotype-telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/ObservabilityKit"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
axum = "0.7"
